kubernetes/apps/home-assistant/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    backups.kalexlab.xyz/use: "true"
