kubernetes/apps/home-assistant/manifests/home-assistant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    kalexlab.xyz/app: home-assistant
    kalexlab.xyz/component: home-assistant
spec:
  type: ClusterIP
  ports:
    - name: home-assistant
      port: 8123
      targetPort: http
      protocol: TCP
  selector:
    kalexlab.xyz/app: home-assistant
    kalexlab.xyz/component: home-assistant
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  labels:
    kalexlab.xyz/app: home-assistant
    kalexlab.xyz/component: home-assistant
spec:
  serviceName: home-assistant
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: home-assistant
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: home-assistant
        kalexlab.xyz/component: home-assistant
        kalexlab.xyz/monitoring: "true"
        sso.kalexlab.xyz/idp: authentik
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "docker.io/homeassistant/home-assistant:2026.9.4"
          command: ["python3", "-m", "homeassistant", "--config", "/config"]
          workingDir: /config
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 350Mi
              cpu: 10m
            limits:
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 30
          volumeMounts:
            - mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              name: home-assistant-conf
            - mountPath: /config/secrets.yaml
              subPath: secrets.yaml
              name: home-assistant-secrets
            - mountPath: /config
              name: home-assistant-config-pvc
            - mountPath: /tmp
              name: tmp
            - mountPath: /usr/local/lib/python3.14/site-packages
              name: site-packages
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: home-assistant-conf
          configMap:
            name: home-assistant-conf
        - name: home-assistant-secrets
          secret:
            secretName: home-assistant-secrets
        - name: site-packages
          emptyDir:
            sizeLimit: 3Gi
  volumeClaimTemplates:
    - metadata:
        name: home-assistant-config-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
