kubernetes/apps/home-assistant/manifests/mosquitto.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  labels:
    kalexlab.xyz/app: home-assistant
    kalexlab.xyz/component: mosquitto
spec:
  type: ClusterIP
  ports:
    - name: mosquitto
      port: 1883
      targetPort: mqtt
      protocol: TCP
  selector:
    kalexlab.xyz/app: home-assistant
    kalexlab.xyz/component: mosquitto
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  labels:
    kalexlab.xyz/app: home-assistant
    kalexlab.xyz/component: mosquitto
spec:
  serviceName: mosquitto
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: mosquitto
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: home-assistant
        kalexlab.xyz/component: mosquitto
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "docker.io/library/eclipse-mosquitto:2.0.22"
          imagePullPolicy: Always
          ports:
            - name: mqtt
              containerPort: 1883
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: 3Mi
              cpu: 1m
            limits:
              memory: 20Mi
              cpu: 5m
          readinessProbe:
            tcpSocket:
              port: mqtt
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: mqtt
            failureThreshold: 3
            periodSeconds: 30
          volumeMounts:
            - mountPath: /mosquitto/config
              name: mosquitto-conf
            - mountPath: /mosquitto/data
              name: mosquitto-data-pvc
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: mosquitto-conf
          configMap:
            name: mosquitto-conf
  volumeClaimTemplates:
    - metadata:
        name: mosquitto-data-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
