kubernetes/apps/home-assistant/manifests/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coredns
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: udp-53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: home-assistant
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: home-assistant
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: http
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: cluster
      ports:
        - protocol: TCP
          port: postgresql
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: mosquitto
      ports:
        - protocol: TCP
          port: mqtt
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: cluster
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: home-assistant
      ports:
        - protocol: TCP
          port: postgresql
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mosquitto
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: mosquitto
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: home-assistant
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: zigbee2mqtt
      ports:
        - protocol: TCP
          port: mqtt
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zigbee2mqtt
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: home-assistant
      kalexlab.xyz/component: zigbee2mqtt
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: http
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: home-assistant
              kalexlab.xyz/component: mosquitto
      ports:
        - protocol: TCP
          port: mqtt
    # For OTA updates
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
